--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
 
     btn &&
       btn.addEventListener("click", async (event) => {
-        const res = await fetch("http://localhost:3000/controllers/drl");
+        const res = await fetch(
+          "http://localhost:3000/controllers/drl"
+          // "http://led-avto.com.ua/ctrlByAvto/controllers/drl"
+        );
 
         if (!res.ok) return;
 
